# trip

trip_project/: db.sqlite3  pyproject.toml
trip_project/accounts/: serializers.py  urls.py  views.py
trip_project/accounts/migrations/: 0001_initial.py  0002_delete_employee.py
trip_project/trip_project/: asgi.py  settings.py  urls.py  wsgi.py
