[tool.poetry]
name = "trip_project"
version = "0.1.0"
description = ""
authors = ["Prayogi <prayogiap81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0"
djangorestframework = "3.13.1"
idna = "3.3"
itypes = "1.2.0"
Jinja2 = "3.0.3"
MarkupSafe = "2.0.1"
openapi-codec = "1.3.2"
Pillow = "8.4.0"
pycparser = "2.21"
pytz = "2021.3"
requests = "2.27.0"
simplejson = "3.17.6"
sqlparse = "0.4.2"
uritemplate = "4.1.1"
urllib3 = "1.26.7"
CacheControl = "0.12.10"
cachy = "0.3.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.9"
cleo = "0.8.1"
clikit = "0.6.2"
crashtest = "0.3.1"
distlib = "0.3.4"
filelock = "3.4.2"
html5lib = "1.1"
keyring = "21.8.0"
lockfile = "0.12.2"
msgpack = "1.0.3"
packaging = "20.9"
pastel = "0.2.1"
pexpect = "4.8.0"
pkginfo = "1.8.2"
platformdirs = "2.4.1"
poetry = "1.1.12"
poetry-core = "1.0.7"
ptyprocess = "0.7.0"
pylev = "1.4.0"
pyparsing = "3.0.6"
requests-toolbelt = "0.9.1"
shellingham = "1.4.0"
six = "1.16.0"
tomlkit = "0.8.0"
virtualenv = "20.13.0"
webencodings = "0.5.1"
asgiref = "3.4.1"
cffi = "1.15.0"
coreapi = "2.3.3"
coreschema = "0.0.4"
cryptography = "36.0.1"
django-crispy-forms = "1.13.0"
django-rest-knox = "4.1.0"
django-rest-swagger = "2.2.0"
djangorestframework-simplejwt = "^5.0.0"
drf-flex-fields = "^0.9.6"
django-cors-headers = "^3.10.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
